[project]
name = "qfact-supplies"
version = "1.0.0"
description = "QFACT Supplies — учёт заказов"
requires-python = ">=3.10"

dependencies = [
    "flet>=0.25.0",
    "gspread==5.12.0",
    "oauth2client==4.1.3",
    "httplib2",
    "pyasn1",
    "pyasn1-modules",
    "rsa",
    "google-auth",
    "google-auth-oauthlib==0.8.0",
]

[tool.flet]
org = "com.qfact"
product = "QFACT Supplies"
company = "QFACT"
copyright = "© 2026 QFACT"

[tool.flet.app]
path = "."
module = "main"

[tool.flet.android]
permissions = ["INTERNET", "ACCESS_NETWORK_STATE"]
min_sdk_version = 29
